# snipclip

./: .gitignore  LICENSE  README.md  README_en.md  README_zh.md  claude-pre.bat  pyproject.toml
.claude/: settings.json  settings.local.json
docs/superpowers/plans/: 2026-06-06-snipclip-implementation.md
docs/superpowers/specs/: 2026-06-06-snipclip-design.md
scripts/: make_fixtures.py  transcribe_vlog.py
skill/: snipclip.md
snipclip/: __init__.py  _cv.py  _ffmpeg.py  cli.py  cutter.py  detector.py  extractor.py  groups.py  indexer.py  keyframe.py  probe.py  quality.py  scene_classifier.py  segment.py  subtitler.py  transcriber.py
tests/: __init__.py  conftest.py  test_cli.py  test_cutter.py  test_extractor.py  test_ffmpeg.py  test_probe.py  test_subtitler.py  test_transcriber.py
